refactor(member): remove member block feature across backend